Added an explicit tests to check tied behavior. Remove unnecessary safety barrier for var = 0.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,8 @@ enable_testing()
 add_executable(
     libtest 
     src/basic.cpp
+    src/ties.cpp
+    src/utils.cpp
 )
 
 target_link_libraries(
