--- a/.github/workflows/doxygenate.yaml
+++ b/.github/workflows/doxygenate.yaml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Add Pretty CSS
+      uses: wei/wget@v1
+      with:
+        args: -O docs/doxygen-awesome.css https://raw.githubusercontent.com/jothepro/doxygen-awesome-css/main/doxygen-awesome.css
     - name: Doxygen Action
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
