--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,10 +18,9 @@ add_executable(
     libtest 
     src/basic.cpp
     src/ties.cpp
-#    src/options.cpp
-#    src/runners.cpp
-#    src/divzero.cpp
-#    src/utils.cpp
+    src/options.cpp
+    src/SortBy.cpp
+    src/divzero.cpp
 )
 
 target_link_libraries(
