--- a/.github/workflows/compare-limma.yaml
+++ b/.github/workflows/compare-limma.yaml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - master
+  pull_request:
 
 name: limma comparison
 
@@ -11,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     container: bioconductor/bioconductor_docker:devel
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
 
     - name: Install packages
       shell: Rscript {0}
