--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -15,18 +15,14 @@ jobs:
       matrix:
         config:
         - {
-            name: "Ubuntu Latest GCC", 
-            os: ubuntu-latest,
-            cov: false
-          }
-        - {
             name: "Ubuntu Latest GCC, coverage enabled", 
             os: ubuntu-latest,
             cov: true
           }
         - {
             name: "macOS Latest Clang", 
-            os: macos-latest
+            os: macos-latest,
+            cov: false
           }
 
     steps:
@@ -62,3 +58,5 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         directory: build/tests/CMakeFiles/libtest.dir/src/
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
