--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,12 @@ FetchContent_MakeAvailable(googletest)
 enable_testing()
 include(GoogleTest)
 
+option(CODE_COVERAGE "Enable coverage testing" OFF)
+set(DO_CODE_COVERAGE OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    set(DO_CODE_COVERAGE ON)
+endif()
+
 macro(decorate_exe name) 
     target_link_libraries(
         ${name}
@@ -24,8 +30,7 @@ macro(decorate_exe name)
 
     target_compile_options(${name} PRIVATE -Wall -Werror -Wpedantic -Wextra)
 
-    set(CODE_COVERAGE "Enable coverage testing" OFF)
-    if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    if(DO_CODE_COVERAGE)
         target_compile_options(${name} PRIVATE -O0 -g --coverage)
         target_link_options(${name} PRIVATE --coverage)
     endif()
