--- a/.github/workflows/compare-limma.yaml
+++ b/.github/workflows/compare-limma.yaml
@@ -14,6 +14,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set directories
+      run: |
+        echo "R_PKG_DIR=${R_HOME}/site-library" >> $GITHUB_ENV
+
+    - name: Restore the package directory
+      uses: actions/cache@v4
+      with:
+        path: ${{ env.R_PKG_DIR }}
+        key: check-packages
+
     - name: Install packages
       shell: Rscript {0}
       run: |
