Switch to the subpar library for a central parallelization scheme.
This defines the WEIGHTEDLOWESS_CUSTOM_PARALLEL macro by default. It allows us
to get rid of all the macro nonsense and simplifies testing.

We also remove some of the parallelization for the robust calculations, where
the operations are so simple that they are outweighted by the overhead of
parallel setup. We replace them with OpenMP SIMD instructions instead.

--- a/.github/workflows/compare-limma.yaml
+++ b/.github/workflows/compare-limma.yaml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Get latest CMake
+      uses: lukka/get-cmake@latest
+
+    - name: Prebuild stuff
+      run: cmake -S . -B build -DWEIGHTEDLOWESS_TESTS=OFF
+
     - name: Set directories
       run: |
         echo "R_PKG_DIR=${R_HOME}/site-library" >> $GITHUB_ENV
