--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,3 +1,6 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+find_dependency(ltla_subpar 0.2.1 CONFIG REQUIRED)
+
 include("${CMAKE_CURRENT_LIST_DIR}/ltla_WeightedLowessTargets.cmake")
