Sprinkle in OpenMP SIMD pragmas during interpolation.
Also switched from a loop to std::fill() for clarity, efficiency.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,7 @@ if (OpenMP_FOUND)
     # To test the SIMD macros.
     add_executable(
         omptest
+        src/basic.cpp
         src/robust.cpp
     )
     decorate_exe(omptest)
