Stripped out OpenMP SIMD macros as they're not worth the effort.
Some testing on godbolt indicates that the compiler autovectorizes wherever it
can anyway; the OpenMP macros don't change the compiler's decision much, at
least not in the places that it's used in this codebase. So, we remove them
to reduce the risk of incorrectness and the amount of testing we have to do.

On that note, we can get rid of the OpenMP tests, given that there's no more
macros to test and the parallelization is already handled by subpar's tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,30 +13,6 @@ option(INSTALL_GTEST "Enable installation of googletest." OFF)
 FetchContent_MakeAvailable(googletest)
 
 enable_testing()
-include(GoogleTest)
-
-option(CODE_COVERAGE "Enable coverage testing" OFF)
-set(DO_CODE_COVERAGE OFF)
-if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    set(DO_CODE_COVERAGE ON)
-endif()
-
-macro(decorate_exe name) 
-    target_link_libraries(
-        ${name}
-        gtest_main
-        WeightedLowess
-    )
-
-    target_compile_options(${name} PRIVATE -Wall -Werror -Wpedantic -Wextra)
-
-    if(DO_CODE_COVERAGE)
-        target_compile_options(${name} PRIVATE -O0 -g --coverage)
-        target_link_options(${name} PRIVATE --coverage)
-    endif()
-
-    gtest_discover_tests(${name})
-endmacro()
 
 add_executable(
     libtest 
@@ -48,16 +24,20 @@ add_executable(
     src/window.cpp
     src/robust.cpp
 )
-decorate_exe(libtest)
 
-find_package(OpenMP)
-if (OpenMP_FOUND) 
-    # To test the SIMD macros.
-    add_executable(
-        omptest
-        src/basic.cpp
-        src/robust.cpp
-    )
-    decorate_exe(omptest)
-    target_link_libraries(omptest OpenMP::OpenMP_CXX)
+target_link_libraries(
+    libtest
+    gtest_main
+    WeightedLowess
+)
+
+target_compile_options(libtest PRIVATE -Wall -Werror -Wpedantic -Wextra)
+
+option(CODE_COVERAGE "Enable coverage testing" OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    target_compile_options(libtest PRIVATE -O0 -g --coverage)
+    target_link_options(libtest PRIVATE --coverage)
 endif()
+
+include(GoogleTest)
+gtest_discover_tests(libtest)
