--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -2,5 +2,6 @@
 
 include(CMakeFindDependencyMacro)
 find_dependency(ltla_subpar 0.3.1 CONFIG REQUIRED)
+find_dependency(ltla_sanisizer 0.1.2 CONFIG REQUIRED)
 
 include("${CMAKE_CURRENT_LIST_DIR}/ltla_WeightedLowessTargets.cmake")
