--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -6,4 +6,11 @@ FetchContent_Declare(
   GIT_TAG master # ^0.3.1
 )
 
+FetchContent_Declare(
+  sanisizer
+  GIT_REPOSITORY https://github.com/LTLA/sanisizer
+  GIT_TAG master # ^0.1.2
+)
+
 FetchContent_MakeAvailable(subpar)
+FetchContent_MakeAvailable(sanisizer)
