Expanded test suite for compute() with various choices of anchors=.
Also added some coverage for interpolation in the presence of tied anchors.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,7 +41,7 @@ endmacro()
 
 add_executable(
     libtest
-    src/basic.cpp
+    src/compute.cpp
     src/ties.cpp
     src/options.cpp
     src/SortBy.cpp
