--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 
 project(WeightedLowess
     VERSION 2.1.4
-    DESCRIPTION "A C++ port of the limma::weightedLowess function"
+    DESCRIPTION "C++ port of the limma::weightedLowess function"
     LANGUAGES CXX)
 
 add_library(WeightedLowess INTERFACE)
