Convert code for R-based comparisons into a proper test package.
This makes it a bit easier to use interactively as we don't need to recompile
the C++ code for each new R session.

--- a/.github/workflows/compare-limma.yaml
+++ b/.github/workflows/compare-limma.yaml
@@ -35,8 +35,11 @@ jobs:
       run: |
         BiocManager::install(c("limma", "Rcpp", "testthat"))
 
+    - name: Install the test package
+      run: R CMD INSTALL tests/R
+
     - name: Run the comparisons
       shell: Rscript {0}
       run: |
-        setwd("tests/R")
-        testthat::test_file("run.R", stop_on_failure=TRUE)
+        setwd("tests/R/tests")
+        testthat::test_file("testthat.R", stop_on_failure=TRUE)
